--- a/Dados/LimpezaDados/vamolaveroque.Rmd
+++ b/Dados/LimpezaDados/vamolaveroque.Rmd
@@ -22,12 +22,10 @@ When you click the **Knit** button a document will be generated that includes bo
 Inicio de análise aos dados. 
 
 ```{r cars}
-summary(cars)
 DadosAposRevisao <- read_excel("DadosAposRevisao.xlsx")
 View(DadosAposRevisao)   
 attach(DadosAposRevisao)
-vis_dat(DadosAposRevisao)
-vis_miss(DadosAposRevisao, warn_large_data= FALSE)
+vis_miss(DadosAposRevisao, warn_large_data = FALSE)
 
 ```
 
@@ -36,7 +34,10 @@ vis_miss(DadosAposRevisao, warn_large_data= FALSE)
 You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
-plot(pressure)
+plot_intro(DadosAposRevisao)
+plot_missing(DadosAposRevisao) + theme_bw() + ggtitle("Percentagem de valores omissos")
+
+
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
